fixed patient mut table + collapse + styling + js

--- a/css/footerstyle.css
+++ b/css/footerstyle.css
@@ -7,13 +7,13 @@
   font-family: "Poppins", sans-serif;
 }
 
-bodyfooter {
+footer {
   display: flex;
   background: #f0f2f3;
   justify-content: flex-end;
   align-items: flex-end;
   min-height: 60vh;
-  margin-top: 10px;
+  margin-top: 200px;
 }
 
 .footer {
